test/tools/router_check/test/config/ContentType.golden.json
[
  {
    "test_name": "Test_1",
    "input": {
      ":authority": "www.lyft.com",
      ":path": "/"
    },
    "validate": {"cluster_name":"local_service"}
  },
  {
    "test_name": "Test_2",
    "input": {
      ":authority": "www.lyft.com",
      ":path": "/",
      "additional_request_headers": [{"field": "content-type", "value": "application/grpc"}]
    },
    "validate": {"cluster_name": "local_service_grpc"}
  },
  {
    "test_name": "Test_3",
    "input": {
      ":authority": "www.lyft.com",
      ":path": "/",
      "additional_request_headers": [{"field": "content-type", "value": "foo"}]
    },
    "validate": {"cluster_name": "local_service"}
  }
]
