test/tools/router_check/test/config/ContentType_expected.json
[
    {
      "authority": "www.lyft.com",
      "path": "/",
      "check": {"cluster_name":"local_service"}
    },
    {
      "authority": "www.lyft.com",
      "path": "/",
      "additional_headers":[
	      { "name":"content-type", "value":"application/grpc"}
      ],
      "check": {"cluster_name":"local_service_grpc"}
    },
    {
      "authority": "www.lyft.com",
      "path": "/",
      "additional_headers":[
        { "name":"content-type", "value":"foo"}
      ],
      "check": {"cluster_name":"local_service"}
    }
]
